# morse_translator

./: CMakeLists.txt
src/: Morse.cpp  Morse.h  main.cpp  main.qml
